Bug 226637 links folder still doesn't work